--- a/css/styles.css
+++ b/css/styles.css
@@ -186,16 +186,112 @@ body {
 /* -----------------header----------------- */
 .header {
   border-bottom: 1px solid var(--footer-text-color);
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 .nav {
   display: flex;
   align-items: center;
 }
 .nav-list {
+  display: none;
+}
+.nav-btn {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  color: #2e2f42;
+}
+.nav-btn .icon {
+  fill: currentColor;
+}
+.menu-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  width: 24px;
+  height: 24px;
+  background-color: var(--footer-text-color);
+  border: 1px solid #2e2f42;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-btn:active,
+.menu-btn:hover,
+.menu-btn:focus {
+  background-color: var(--button-active);
+  color: #ffffff;
+}
+.modal-btn .icon {
+  fill: currentColor;
+}
+.menu-nav-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.menu-add-list {
+  display: flex;
+  flex-direction: column-reverse;
   gap: 40px;
+}
+.menu-add-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  font-style: normal;
+  color: var(--primary-text-color);
+}
+.menu-phone-link {
+  color: var(--footer-background);
+  font-weight: 700;
+  font-size: 36px;
+  font-style: normal;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+.menu-link {
+  color: var(--footer-background);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+.container.flex {
+  justify-content: space-between;
+}
+.mob-menu {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 80px 35px 40px 40px;
+  background-color: #ffffff;
+}
+.menu-add-list:hover,
+.menu-add-list:focus,
+.menu-phone-link:hover,
+.menu-phone-link:focus {
+  color: var(--logo-text-color);
+}
+.menu-address {
+  margin-top: auto;
+  margin-bottom: 48px;
+}
+.menu-soc-list {
+  display: flex;
+  gap: 56px;
 }
 .current {
   position: relative;
@@ -234,32 +330,23 @@ body {
 .nav-link:focus {
   color: var(--button-active);
 }
-.current {
-  position: relative;
-  color: var(--button-active);
-}
-.current::after {
-  content: "";
-  position: absolute;
-  top: 44px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: var(--button-active);
-}
+
 .address {
-  font-style: normal;
-  margin-left: auto;
+  display: none;
 }
 .add-list {
   display: flex;
-  gap: 40px;
+  /* gap: 12px; */
+}
+.add-list li {
+  line-height: 0;
 }
 .address-link {
   color: var(--primary-text-color);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
@@ -274,18 +361,23 @@ body {
   padding-top: 112px;
   padding-bottom: 112px;
   text-align: center;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back_mob.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back_mob2x.jpg);
+  }
+}
 .hero-title {
   color: var(--third-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 34px;
   line-height: 1.11;
   letter-spacing: 0 2em;
-  width: 320px;
+  max-width: 320px;
   margin: 0 auto 72px;
 }
 /* -----------------advantages----------------- */
@@ -649,6 +741,19 @@ body {
   margin: 0 auto;
 }
 /* -----------------@media----------------- */
+@media screen and (min-width: 428px) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back_tab.jpg);
+  }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back_tab2x.jpg);
+    }
+  }
+  .hero-title {
+    font-size: 36px;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .adv-list .list-item:not(:last-child) {
@@ -691,6 +796,31 @@ body {
   .container {
     max-width: 768px;
   }
+  .mob-menu,
+  .nav-btn {
+    display: none;
+  }
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
+  .address {
+    display: block;
+    font-style: normal;
+    margin-left: auto;
+  }
+  .add-list {
+    flex-direction: column;
+    gap: 12px;
+  }
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back.jpg);
+  }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_back2x.jpg);
+    }
+  }
   .hero-title {
     width: 496px;
     margin-bottom: 36px;
@@ -729,6 +859,11 @@ body {
     margin-right: 24px;
     width: 264px;
   }
+  .modal {
+    width: 408px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -749,6 +884,19 @@ body {
   .hero {
     padding-top: 168px;
     padding-bottom: 168px;
+  }
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+  .add-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .address-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
   .advantages {
     padding-top: 120px;
